--- a/root/css/generalAccount.css
+++ b/root/css/generalAccount.css
@@ -57,20 +57,41 @@
 main {  
     margin: 250px 32px 5% 0;
 }
+.accountTest {
+  text-align: center;
+}
 #myaccount {
     margin-left: 10%;
     text-align: left;
+    display: inline-block;
+    vertical-align: middle;
+}
+#mysurvey { 
+  margin-left: 2%;
+  text-align: left;
+  display: inline-block;
+  vertical-align: middle;
+}
+.survey-btn {
+  width: 150px;
+  height: 35px;
+  font-size: 16;
+  border-radius: 2px;
+  border-color: #f24e67;
+  border-style: solid;
+  color: #f24e67;
+  border-width: 1px;
+}
+.survey-btn:hover {
+  background-color: #cf4257;
+  color: white;
 }
 #myrecipes {
     margin-left: 10%;
     text-align: left;
     margin-bottom: 2%;
 }
-#survey { 
-  margin-left: 10%;
-  text-align: left;
-  margin-bottom: 2%;
-}
+
 span {
   margin-top: center;
 }
@@ -150,15 +171,4 @@ span {
 .foodPic {
     width: 90%;
     position: relative;
-}
-.survey-btn {
-  width: 150px;
-  height: 40px;
-  font-size: 16;
-  border-radius: 12px;
-  border-color: #f24e67;
-  border-style: solid;
-  color: #f24e67;
-  border-width: 1px;
-  background-color: white;
 }
